--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,20 @@ MAJ par Pilou le 29/10/21 */
   padding: 0;
   box-sizing: border-box;
 }
+#tsparticles{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: fixed;
+    width: 100%;
+    z-index: -1;
+}
 /* header */
 header {
   height: 250px;
   padding-top: 60px;
-  background-image: linear-gradient(0deg, rgb(255, 255, 255) 0%, transparent 5%),
+  background-image: linear-gradient(0deg, rgb(255, 255, 255) 0%, transparent 0%),
     repeating-linear-gradient(
       135deg,
       rgba(238, 238, 238, 0.54) 0px,
