--- a/styles/style.css
+++ b/styles/style.css
@@ -18,24 +18,15 @@ MAJ par Pilou le 29/10/21 */
     width: 100%;
     z-index: -1;
 }
+
 /* header */
 header {
   height: 250px;
-  padding-top: 60px;
-  background-image: linear-gradient(0deg, rgb(255, 255, 255) 0%, transparent 0%),
-    repeating-linear-gradient(
-      135deg,
-      rgba(238, 238, 238, 0.54) 0px,
-      rgba(238, 238, 238, 0.54) 1px,
-      transparent 1px,
-      transparent 11px
-    ),
-    repeating-linear-gradient(
-      45deg,
-      rgba(238, 238, 238, 0.54) 0px,
-      rgba(238, 238, 238, 0.54) 1px,
-      transparent 1px,
-      transparent 11px
-    ),
-    linear-gradient(0deg, rgb(255, 255, 255), rgb(255, 255, 255));
+  padding-top: 90px;
+  background-image: repeating-linear-gradient(67.5deg, hsla(145,0%,97%,0.2) 0px, hsla(145,0%,97%,0.2) 0px,transparent 0px, transparent 1px,hsla(145,0%,97%,0.2) 1px, hsla(145,0%,97%,0.2) 4px,transparent 4px, transparent 5px,hsla(145,0%,97%,0.2) 5px, hsla(145,0%,97%,0.2) 8px),repeating-linear-gradient(51deg, hsla(145,0%,97%,0.2) 0px, hsla(145,0%,97%,0.2) 0px,transparent 0px, transparent 1px,hsla(145,0%,97%,0.2) 1px, hsla(145,0%,97%,0.2) 4px,transparent 4px, transparent 5px,hsla(145,0%,97%,0.2) 5px, hsla(145,0%,97%,0.2) 8px),linear-gradient(186deg, rgba(237,237,237, 0.66),rgba(199,199,199, 0.66));
+}
+
+/* Main */
+.card{
+    max-width: 300px;
 }
