--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,9 @@ MAJ par Pilou le 29/10/21 */
 body{
   min-height: 100vh;
 }
+h3{
+  margin-bottom: 1em;
+}
 
 /* header */
 header {
@@ -32,6 +35,12 @@ header {
 /* Main */
 .card{
     max-width: 300px;
+}
+.photoProfil{
+  max-width: 200px;
+}
+.icone{
+  max-height: 50px;
 }
 
 /* Footer */
