--- a/styles/style.css
+++ b/styles/style.css
@@ -43,13 +43,14 @@ header {
 }
 .photoProfil{
   max-width: 200px;
+  clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
 }
 .icone{
   max-height: 50px;
 }
 .titreCv{
   padding: 0.5em;
-  clip-path: polygon(5% 0, 8% 95%, 50% 95%, 92% 95%, 95% 0);
+  clip-path: polygon(10% 0, 90% 0, 100% 20%, 95% 100%, 50% 90%, 5% 100%, 0 20%);
 }
 
 /* Footer */
