--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ h1{
   margin-bottom: 1em;
 }
 h2, h3{
-  color: #3399f3;
+  color: #446e9b;
   margin-bottom: 1em;
 }
 h4{
@@ -34,6 +34,9 @@ h4{
 }
 header, .enTeteCv, .titreCv{
   background-image: repeating-linear-gradient(67.5deg, hsla(145,0%,97%,0.2) 0px, hsla(145,0%,97%,0.2) 0px,transparent 0px, transparent 1px,hsla(145,0%,97%,0.2) 1px, hsla(145,0%,97%,0.2) 4px,transparent 4px, transparent 5px,hsla(145,0%,97%,0.2) 5px, hsla(145,0%,97%,0.2) 8px),repeating-linear-gradient(0deg, hsla(145,0%,97%,0.2) 0px, hsla(145,0%,97%,0.2) 0px,transparent 0px, transparent 1px,hsla(145,0%,97%,0.2) 1px, hsla(145,0%,97%,0.2) 4px,transparent 4px, transparent 5px,hsla(145,0%,97%,0.2) 5px, hsla(145,0%,97%,0.2) 8px),linear-gradient(135deg, rgb(237, 237, 237),rgb(68,110,155));
+}
+a{
+  color: #446e9b;
 }
 .hidden{
   display: none;
@@ -53,7 +56,8 @@ header {
 }
 .photoProfil{
   max-width: 200px;
-  clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+  border-radius: 3px;
+
 }
 .icone{
   max-height: 50px;
@@ -61,7 +65,7 @@ header {
 .titreCv{
   color : #446e9b;
   padding: 0.5em;
-  clip-path: polygon(20% 0, 80% 0, 100% 10%, 95% 100%, 50% 90%, 5% 100%, 0 10%);
+  border-radius: 3px;
 }
 article{
   margin: 1em 0;
